# pyproject-pyupgrade

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
pyproject_pyupgrade/: __main__.py  cli.py  config.py
